# rust-ai-sql-agent

./: Cargo.toml  README.md
src/: chain.rs  main.rs  text_to_sql_chain.rs
