[package]
name = "ai_db_sql_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenvy = "0.15.7"
ollama-rs = "0.3.0"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-async-std", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
